# robot-masters-rogue

./: .gitignore  DEVELOPMENT_PRINCIPLES.md  PROPERTY_ADDRESS_REORGANIZATION_SUMMARY.md  cooldown_implementation_plan.md
debug-node/: INTEGRATION_TEST_RESULTS.md  collision-optimization-benchmark.js  debug-action-execution-order.js  debug-action-timing.js  debug-boundary-cases.js  debug-boundary-correction.js  debug-boundary-limits.js  debug-boundary-test.js  debug-boundary-values.js  debug-character-data-structure.cjs  debug-collision-comprehensive.js  debug-collision-detailed.js  debug-collision-detection-simple.js  debug-collision-detection.js  debug-collision-flags.js  debug-collision-issue.js  debug-collision-math.js  debug-collision-simple.js  debug-collision-timing.js  debug-comprehensive-correction.js  debug-conditions.js  debug-direction-fixed.js  debug-direction-system.js  debug-energy-regeneration.cjs  debug-energy-regeneration.js  debug-execution-order.js  debug-floor-collision.js  debug-force-wall-collision.js  debug-frame-processing-order.js  debug-horizontal-collision-simple.js  debug-horizontal-collision.js  debug-initial-velocity.js  debug-max-correction.js  debug-minimal-overlap.js  debug-movement-with-velocity.js  debug-position-correction.js  debug-right-wall-extreme.js  (+74 more)
game-engine/: CHANGELOG.md  Cargo.toml  README.md
game-engine/src/: actions_simple.rs  api.rs  behavior.rs  behavior_integration.rs  cleanup_verification_test.rs  collision.rs  conditions.rs  conditions_simple.rs  constants.rs  constants_test.rs  cooldown_integration_test.rs  cooldown_property_test.rs  cooldown_simple_test.rs  cooldown_skip_test.rs  cooldown_test.rs  core.rs  entity.rs  error.rs  error_test.rs  integration_tests.rs  lib.rs  manual_cooldown_test.rs  math.rs  physics.rs  random.rs  script.rs  spawn.rs  state.rs  state.rs.backup  status.rs  test_task6.rs  test_utils.rs  tilemap.rs
game-engine/src/tests/: collision_test.rs  energy_regeneration_test.rs  entity_structures_test.rs  mod.rs  movement_actions_test.rs  position_correction_test.rs  property_access_test.rs  status_effect_script_tests.rs  user_scenario_test.rs
onchain-logic/: Cargo.toml
wasm-wrapper/: .rust-analyzer.toml  BUILD.md  Cargo.toml  Makefile  build.sh  package.json  run_tests.sh  rust-toolchain.toml  tsconfig.json  wasm-pack.toml
wasm-wrapper/.github/workflows/: build.yml
wasm-wrapper/docs/: API.md  ErrorHandling.md  Examples.md  JSON_STRUCTURE.md  README.md  TypeScript.d.ts
wasm-wrapper/src/: error.rs  lib.rs  tests.rs  types.rs
wasm-wrapper/tests/: README.md  TEST_DOCUMENTATION.md  constants.ts  examples.ts
(+92 files in other folders)
