[package]
name = "robot-masters-onchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "robot_masters_onchain"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []