[package]
name = "wasm-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
robot-masters-engine = { path = "../game-engine" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Rust analyzer configuration
[package.metadata.rust-analyzer]
# Enable proc-macro support
procMacro.enable = true
# Enable build scripts
cargo.buildScripts.enable = true
