[package]
name = "wasm-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
name = "wasm_wrapper"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
robot-masters-engine = { path = "../game-engine" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"

# Optimization profiles
[profile.release]
# Enable link-time optimization for smaller binary size
lto = true
# Optimize for size
opt-level = "s"
# Enable debug info for better error messages
debug = true
# Panic strategy for WASM
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
panic = "abort"

# WASM-specific optimizations
[package.metadata.wasm-pack.profile.release]
# Additional wasm-opt optimizations
wasm-opt = ["-Os", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
# Skip wasm-opt for faster dev builds
wasm-opt = false

# Rust analyzer configuration
[package.metadata.rust-analyzer]
# Enable proc-macro support
procMacro.enable = true
# Enable build scripts
cargo.buildScripts.enable = true
